# fitba-legends

./: .gitignore  Makefile  db.yml.example  elm-package.json  fitba-legends.cabal  index.html  package.json  style.css
src/: Cmds.elm  Core.hs  DB.hs  FixturesView.elm  FixturesViewMsg.elm  Main.elm  Model.elm  PopulateSchema.hs  RandName.hs  RootMsg.elm  Schema.hs  ServerMain.hs  Settings.hs  Styles.elm  TeamView.elm  TeamViewMsg.elm  Types.hs  Utils.elm  Utils.hs  main.elm
src/Fitba/: AIManager.hs  Config.hs  Core.hs  DB.hs  EndOfSeason.hs  Hash.hs  Match.hs  Player.hs  RandName.hs  Schema.hs  Settings.hs  TransferBid.hs  TransferListing.hs  TransferMarket.hs  Types.hs  Utils.hs
src/daemon/: Main.hs
src/frontend/: ClientServer.elm  FixturesView.elm  FixturesViewMsg.elm  Main.elm  Model.elm  PlayerDetailedView.elm  RootMsg.elm  Styles.elm  TeamView.elm  TeamViewTypes.elm  TransferMarket.elm  TransferMarketTypes.elm  Types.elm  Uitk.elm  Utils.elm
src/tests/: DbTest.hs  TestCore.hs  TestMatch.hs
src/webserver/: Main.hs
static/: style.css
tests/: TestCore.hs
