name:                fitba-legends
version:             0.1.0.0
synopsis:            A football management webapp game
-- description:         
license:             AGPL-3
license-file:        LICENSE
author:              Tom Morton
maintainer:          tomm@riseup.net
copyright:           (c) 2017 Tom Morton
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-language: Haskell2010
  exposed-modules: Fitba.Core, Fitba.DB, Fitba.Schema, Fitba.Types,
    Fitba.RandName, Fitba.Utils, Fitba.Settings, Fitba.Match
  hs-source-dirs:      src
  ghc-options: -Wall
  build-depends: base >=4.9 && <4.10,
                 aeson,
                 array,
                 containers,
                 esqueleto >=2.5 && <2.6,
                 exceptions,
                 microlens,
                 microlens-th,
                 monad-logger,
                 mtl,
                 MonadRandom >= 0.5,
                 persistent >= 2.6,
                 persistent-sqlite >= 2.6,
                 persistent-template >= 2.5,
                 random,
                 resourcet,
                 text,
                 time,
                 transformers,
                 vector

test-suite test-core
  type: exitcode-stdio-1.0
  main-is: TestCore.hs
  hs-source-dirs: src/tests
  ghc-options: -Wall
  build-depends: base >=4.9 && <4.10,
                 persistent-sqlite >= 2.6,
                 directory,
                 fitba-legends
  default-language: Haskell2010

executable test-match
  main-is: TestMatch.hs
  hs-source-dirs: src/tests
  ghc-options: -Wall
  build-depends: base >=4.9 && <4.10,
                 persistent-sqlite >= 2.6,
                 persistent >= 2.6,
                 MonadRandom >= 0.5,
                 directory,
                 containers,
                 random,
                 fitba-legends
  default-language: Haskell2010

executable webserver
  main-is:             Main.hs
  --other-modules:
  -- other-extensions:    
  ghc-options: -Wall
  build-depends: base >=4.9 && <4.10,
                 persistent >= 2.6,
                 esqueleto >=2.5 && <2.6,
                 http-types,
                 yesod >= 1.4,
                 yesod-static,
                 text,
                 fitba-legends
  hs-source-dirs:      src/webserver
  default-language:    Haskell2010
